Vocabularies: store the user who created a mapping, and add more permissions (view vocab/update vocab/add vocab/delete own vocab) #3157

--- a/sites/all/modules/custom/scratchpads/scratchpads_vocabularies/theme/scratchpads_vocabularies.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_vocabularies/theme/scratchpads_vocabularies.css
@@ -69,3 +69,12 @@ div.scratchpads-vocabularies-field-info div.scratchpads-vocabularies-term-other 
   margin-left: 0;
   padding-left: 10px;
 }
+
+div.scratchpads-vocabularies-info-page div.scratchpads-vocabularies-term-label {
+  font-size: 1.1em;
+  font-weight: bold;
+}
+div.scratchpads-vocabularies-info-page div.scratchpads-vocabularies-term-other {
+  margin-left: 32px;
+  margin-bottom: 1em;
+}
